[workspace]
resolver = "2"
members = [
    "abc275",
    "abc296",
    "abc314",
    "abc335",
    "abc336",
    "abc337",
    "abs",
    "adt_20240118_3",
    "adt_20240123_3",
    "algorithm",
    "arc170",
    "binbin",
    "math-and-algorithm",
    "typical90"
]

[workspace.dependencies]
proconio = "0.4.5"
