[workspace]
resolver = "2"
members = [
    "abc275",
    "abc296",
    "abc314",
    "abc335",
    "abc336",
    "abc337",
    "abc338",
    "abc339",
    "abc340",
    "abc341",
    "abc351",
    "abc352",
    "abc355",
    "abc365",
    "abc366",
    "abc367",
    "abc368",
    "abc369",
    "abc370",
    "abc371",
    "abs",
    "adt_20240118_3",
    "adt_20240123_3",
    "algorithm",
    "arc170",
    "binbin",
    "math-and-algorithm",
    "typical90"
]

[workspace.dependencies]
proconio = "0.4.5"
itertools = "0.11.0"
