[workspace]
resolver = "2"
members = [
    "abc241",
    "abc262",
    "abc275",
    "abc296",
    "abc314",
    "abc335",
    "abc336",
    "abc337",
    "abc338",
    "abc339",
    "abc340",
    "abc341",
    "abc346",
    "abc351",
    "abc352",
    "abc355",
    "abc365",
    "abc366",
    "abc367",
    "abc368",
    "abc369",
    "abc370",
    "abc371",
    "abc372",
    "abc373",
    "abc374",
    "abc375",
    "abc376",
    "abc377",
    "abc378",
    "abc379",
    "abc380",
    "abc382",
    "abs",
    "adt_20240118_3",
    "adt_20240123_3",
    "ahc038",
    "ahc039",
    "algorithm",
    "arc170",
    "binbin",
    "library-practice",
    "math-and-algorithm",
    "tessoku",
    "typical90"
]

[workspace.dependencies]
proconio = { version = "0.4.5", features = ["derive"]}
itertools = "0.11.0"
regex = "1.9.1"
rand = "0.8.5"
ac-library-rs = "0.1.1"
num = "0.4.1"
rand_pcg = "0.3.1"
rustc-hash = "1.1.0"
