[package]
name = "ahc040"
version = "0.1.0"
edition = "2021"

[dependencies]
proconio = { workspace = true }
itertools = { workspace = true }
regex = { workspace = true }
ac-library-rs = { workspace = true }
num = { workspace = true }
rustc-hash = { workspace = true }
rand = { workspace = true }
rand_distr = { workspace = true }
