[package]
name = "ahc048"
version = "0.1.0"
edition = "2021"
rust-version = "1.70"

[dependencies]
proconio = { workspace = true }
itertools = { workspace = true }
regex = { workspace = true }
ac-library-rs = { workspace = true }
num = { workspace = true }
rustc-hash = { workspace = true }
rand = { workspace = true }
rand_distr = { workspace = true }
nalgebra = { workspace = true }
ordered-float = { workspace = true }
fixedbitset = { workspace = true }
rand_pcg = { workspace = true }
rand_chacha = { workspace = true }
